# hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  pyproject.toml
hooks/: format_commit_msg.py
pre_commit_hooks/: format_commit_msg.py
test/: test_format_commit_msg.py
