[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hooks"]

[project]
name = "hooks"
version = "0.1.0"
dependencies = [
  "GitPython",
  "pre-commit",
  "pytest",
]

requires-python = ">= 3.9"

[project.scripts]
format-commit-msg = "hooks.format_commit_msg:main"
